# localization

./: CMakeLists.txt  package.xml  params.yaml  params_real.yaml
launch/: localize_real.launch
msg/: PoseError.msg
src/localization/: motion_model.py  particle_filter.py  sensor_model.py
